puree-tests/src/test/resources/neg/UnusedOptionNeg.scala
object PcTest {
  def f(): Unit = {
    Option(1)
  }
}
